Unit Test And Permission App Test Methods

--- a/MegProject.Data/App.config
+++ b/MegProject.Data/App.config
@@ -15,9 +15,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="MegAppContext" connectionString="Data Source=DESKTOP-K4S9J46;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="MegAppContext" connectionString="Data Source=DESKTOP-6HIGR0S\MURATGUVEN;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
-   <add name="MegAppContext" connectionString="Data Source=.;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />
+    
+    <add name="MegAppContext" connectionString="Data Source=DESKTOP-6HIGR0S\MURATGUVEN;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />
+   <!--<add name="MegAppContext" connectionString="Data Source=.;Initial Catalog=MegAppDb;Persist Security Info=True;User ID=sa;Password=guven85;MultipleActiveResultSets=True;Application Name=EntityFramework;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   
   <runtime>
