--- a/MegProject.Test/packages.config
+++ b/MegProject.Test/packages.config
@@ -2,5 +2,8 @@
 <packages>
   <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Moq" version="4.0.10827" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
+  <package id="Ninject.MockingKernel" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.MockingKernel.Moq" version="3.2.2.0" targetFramework="net452" />
 </packages>
