--- a/MegProject.Common/packages.config
+++ b/MegProject.Common/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EPPlus" version="4.0.5" targetFramework="net452" />
