--- a/MegProject.Data/packages.config
+++ b/MegProject.Data/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net452" />
