--- a/MegProject.Test/packages.config
+++ b/MegProject.Test/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
-  <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
+  <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="Moq" version="4.0.10827" targetFramework="net452" />
+  <package id="Moq" version="4.5.21" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
-  <package id="Ninject.MockingKernel" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.MockingKernel" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MockingKernel.Moq" version="3.2.2.0" targetFramework="net452" />
 </packages>
